--- a/.github/workflows/electrodaftar.yml
+++ b/.github/workflows/electrodaftar.yml
@@ -8,6 +8,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Install NPM dependecies
-        uses: npm install
+        run: npm install
       - name: Build static Website
-        uses: npm run build   
+        run: npm run build   
