--- a/.github/workflows/electrodaftar.yml
+++ b/.github/workflows/electrodaftar.yml
@@ -10,4 +10,9 @@ jobs:
       - name: Install NPM dependecies
         run: npm install
       - name: Build static Website
-        run: npm run build   
+        run: npm run build 
+      - name: upload static website
+        uses: actions/upload-artifact@v2
+        with:
+          name: statis-site
+          push: out/    
